button fix and trending posts spacing

--- a/CSS/style-mobile.css
+++ b/CSS/style-mobile.css
@@ -109,7 +109,7 @@
 
     .column-text {
         flex-direction: column;
-        padding:100px 40px 60px;
+        padding:100px 20px 60px;
     }
     body {
         max-width:100%;
